--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ DATABASE_URL=file:local.db
 # Production
 # DATABASE_URL=libsql://<database>.turso.io
 # DATABASE_AUTH_TOKEN=ey...
+
+# Auth
+AUTH_SECRET=""
+AZUREAD_CLIENT_ID=""
+AZUREAD_CLIENT_SECRET=""
+AZUREAD_TENANT_ID=""
