--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
+		"carbon-components-svelte": "^0.78.0",
 		"drizzle-kit": "^0.19.8",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
