--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"autoprefixer": "^10.4.14",
 		"carbon-components-svelte": "^0.78.0",
 		"drizzle-kit": "^0.19.8",
+		"drizzle-zod": "^0.4.4",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
@@ -34,16 +35,20 @@
 		"prettier-plugin-tailwindcss": "^0.4.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"sveltekit-superforms": "^1.4.0",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"vite": "^4.4.2",
+		"zod": "^3.21.4"
 	},
 	"type": "module",
 	"dependencies": {
 		"@auth/core": "^0.10.0",
 		"@auth/sveltekit": "^0.3.6",
 		"@libsql/client": "^0.3.0",
+		"@microsoft/microsoft-graph-client": "^3.0.5",
+		"dayjs": "^1.11.9",
 		"drizzle-orm": "^0.27.2"
 	}
 }
