--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"sveltekit-superforms": "^1.4.0",
+		"tailwind-material-colors": "^1.0.1",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
