--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
 		"@neoconfetti/svelte": "^1.0.0",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/kit": "^1.22.3",
 		"@types/cookie": "^0.5.1",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
+		"@typescript-eslint/eslint-plugin": "^5.62.0",
+		"@typescript-eslint/parser": "^5.62.0",
 		"autoprefixer": "^10.4.14",
 		"carbon-components-svelte": "^0.78.0",
 		"drizzle-kit": "^0.19.8",
 		"drizzle-zod": "^0.4.4",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte": "^2.30.0",
+		"eslint": "^8.45.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-svelte": "^2.32.2",
 		"mdsvex": "^0.11.0",
 		"postcss": "^8.4.26",
 		"prettier": "^2.8.8",
@@ -37,18 +37,19 @@
 		"prettier-plugin-tailwindcss": "^0.4.1",
 		"rehype-sanitize": "^5.0.1",
 		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
+		"svelte-check": "^3.4.6",
 		"sveltekit-superforms": "^1.4.0",
 		"tailwind-material-colors": "^1.0.1",
 		"tailwindcss": "^3.3.3",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2",
+		"tslib": "^2.6.0",
+		"typescript": "^5.1.6",
+		"vite": "^4.4.4",
 		"zod": "^3.21.4"
 	},
 	"type": "module",
 	"dependencies": {
-		"@auth/core": "^0.10.0",
+		"@auth/core": "^0.10.2",
+		"@auth/drizzle-adapter": "^0.2.1",
 		"@auth/sveltekit": "^0.3.6",
 		"@libsql/client": "^0.3.0",
 		"@microsoft/microsoft-graph-client": "^3.0.5",
