--- a/package.json
+++ b/package.json
@@ -48,12 +48,17 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@auth/core": "^0.10.2",
+		"@auth/core": "^0.12.0",
 		"@auth/drizzle-adapter": "^0.2.1",
 		"@auth/sveltekit": "^0.3.6",
 		"@libsql/client": "^0.3.0",
 		"@microsoft/microsoft-graph-client": "^3.0.5",
 		"dayjs": "^1.11.9",
 		"drizzle-orm": "^0.27.2"
+	},
+	"pnpm": {
+		"overrides": {
+			"@auth/core": "^0.12.0"
+		}
 	}
 }
