--- a/package.json
+++ b/package.json
@@ -30,19 +30,27 @@
 		"eslint": "^8.45.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte": "^2.32.2",
+		"marked": "^7.0.4",
 		"mdsvex": "^0.11.0",
 		"postcss": "^8.4.26",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"prettier-plugin-tailwindcss": "^0.4.1",
 		"rehype-sanitize": "^5.0.1",
+		"rehype-stringify": "^9.0.4",
+		"remark-breaks": "^3.0.3",
+		"remark-parse": "^10.0.2",
+		"remark-rehype": "^10.1.0",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.6",
 		"sveltekit-superforms": "^1.4.0",
+		"svoast": "^2.3.0",
 		"tailwind-material-colors": "^1.0.1",
+		"tailwind-scrollbar": "^3.0.5",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.6.0",
 		"typescript": "^5.1.6",
+		"unified": "^11.0.2",
 		"vite": "^4.4.4",
 		"zod": "^3.21.4"
 	},
