--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"remark-rehype": "^10.1.0",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.6",
+		"svelte-local-storage-store": "^0.6.0",
 		"sveltekit-superforms": "^1.4.0",
 		"svoast": "^2.3.0",
 		"tailwind-material-colors": "^1.0.1",
